tests/ui/frontmatter/frontmatter-with-infostring.rs
---cargo
//~^ ERROR expected item, found `-`
---

#![feature(frontmatter)]

fn main() {
}
